# shift-project

./: .env.build.example  .env.example  .gitignore  BUILD-AND-PUBLISH.md  Makefile  README-DEPLOY.md  README.md  benchmarking_flowfile_nodes_shift.md  benchmarking_flowfile_performance_shift.md  benchmarking_flowfile_shift.md  docker-compose.override.yml  docker-compose.yml  flow.json  inspect_err.py  mkdocs.yml
.claude/: launch.json  (+1 more)
shift-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  bootstrap-secrets.py  docker-entrypoint.sh  main.py  pyproject.toml  start.ps1  stop.ps1  test_e2e_oracle_aggregator.py
shift-backend/alembic/: env.py  script.py.mako
shift-backend/alembic/seeds/: 001_importar_csv_template.py
shift-backend/alembic/versions/: 2026_04_10_1db69e241e7a_tabelas_iniciais.py  2026_04_13_03902dfb62c4_repair_connections_table.py  2026_04_13_6f5b4c2a9d10_add_b2b_access_hierarchy.py  2026_04_13_7c1f2d4e6a8b_add_economic_groups_and_establishments.py  2026_04_13_9db3ffc3c2c4_merge_full_name_and_workflow_templates.py  2026_04_13_a1b2c3d4e5f6_add_full_name_to_users.py  2026_04_13_b7e8f9a0c1d2_workflow_templates.py  2026_04_13_c4a6b8d9e1f2_connection_project_scope.py  (+42 more)
shift-backend/scripts/: init_prefect.py  serve_worker.py  test_agent_graph.py
shift-backend/tests/: conftest.py  test_aggregator_node.py  test_bounded_chunk_queue.py  test_bulk_composite_parameter_value.py  test_code_node.py  test_composite_insert_node.py  test_composite_upsert.py  test_composite_upsert_migration.py  test_custom_node_definition_service.py  test_dead_letter_service.py  test_docker_sandbox.py  test_dynamic_runner.py  test_engine_cache.py  test_execution_plan.py  test_execution_template_snapshot.py  test_executions_api_auth.py  test_executions_api_preview.py  test_filter_node.py  test_if_node.py  test_if_switch_gate_mode.py  test_log_sanitizer.py  test_logging_trace_correlation.py  test_loop_node.py  test_mapper_node.py  test_math_node.py  test_migrator.py  test_node_profile.py  test_node_profile_coverage.py  test_observability_metrics.py  test_observability_tracing.py  test_parameter_resolver.py  test_pivot_node.py  test_record_id_node.py  test_retry_policy.py  test_sample_node.py  test_sandbox_pool.py  test_schema_inference.py  test_semantic_hash.py  test_semantic_hash_propagation.py  test_snapshot_immutability_trigger.py  (+26 more)
shift-mcp-server/: .env.example  README.md  pyproject.toml
shift-mcp-server/shift_mcp_server/: __init__.py  __main__.py  approvals.py  cli.py  client.py  config.py  server.py
shift-mcp-server/shift_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
shift-mcp-server/tests/: test_approvals.py  test_client.py  test_config.py  test_server.py
(+585 files in other folders)
