[project]
name = "shift-backend"
version = "0.1.0"
description = "Backend da plataforma Shift - Integração, migração e automação de dados"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115,<1.0",
    "pydantic>=2.9,<2.11",
    "pydantic-settings>=2.6,<3.0",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.14,<2.0",
    "dlt[postgres]>=1.4,<2.0",
    "duckdb>=1.1,<2.0",
    "langchain-core>=0.3,<1.0",
    "langchain-community>=0.3,<1.0",
    "langgraph>=0.2,<1.0",
    "pwdlib[argon2]>=0.2,<1.0",
    "pyjwt>=2.9,<3.0",
    "python-multipart>=0.0.12",
    "httpx>=0.28",
    "cryptography>=43.0",
    "pyodbc>=5.0",
    "sqlalchemy-firebird>=2.0",
    "firebird-driver>=2.0",
    "openpyxl>=3.1",
    "google-auth[requests]>=2.38,<3.0",
    "litellm>=1.40,<2.0",
    "structlog>=24.0,<25.0",
    "tenacity>=9.0,<10.0",
    "apscheduler>=3.10,<4.0",
    "prometheus-fastapi-instrumentator>=7.0,<8.0",
    "slowapi>=0.1.9,<1.0",
    "langgraph-checkpoint-postgres>=2.0,<3.0",
    "psycopg[binary,pool]>=3.2,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
