[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shift-mcp-server"
version = "0.1.0"
description = "Servidor MCP (Model Context Protocol) que expoe o Platform Agent do Shift via Bearer API key."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Shift Platform" }]
dependencies = [
    # SDK oficial do Anthropic para MCP. O extra "cli" traz click e o
    # runner padrao; usamos o server low-level + transports stdio e
    # streamable-http.
    "mcp[cli]>=1.2",
    "httpx>=0.27,<1.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "click>=8.1,<9.0",
    # Apenas para o transport HTTP. stdio nao depende de starlette/uvicorn.
    "starlette>=0.36,<1.0",
    "uvicorn>=0.29,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-httpx>=0.30,<1.0",
]

[project.scripts]
shift-mcp-server = "shift_mcp_server.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["shift_mcp_server*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
